// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListFieldBuilder 1`] = `
Field {
  "childField": Field {
    "label": "Street",
    "meta": Object {},
    "noWrap": false,
    "schemaConfig": Object {
      "defaultVal": "",
      "type": "string",
    },
    "type": "text",
    "width": Object {
      "xs": 12,
    },
  },
  "label": "Address",
  "meta": Object {},
  "noWrap": false,
  "schemaConfig": Object {
    "arrayType": Object {
      "defaultVal": "",
      "type": "string",
    },
    "defaultVal": Array [],
    "type": "array",
  },
  "type": "list",
  "width": Object {
    "xs": 12,
  },
}
`;

exports[`ListFieldBuilder 2`] = `
Field {
  "childField": Field {
    "label": "Postcode",
    "meta": Object {},
    "noWrap": false,
    "schemaConfig": Object {
      "defaultVal": "",
      "type": "string",
    },
    "type": "text",
    "width": Object {
      "xs": 12,
    },
  },
  "label": "Address",
  "meta": Object {},
  "noWrap": false,
  "schemaConfig": Object {
    "arrayType": Object {
      "defaultVal": "",
      "type": "string",
    },
    "defaultVal": Array [],
    "type": "array",
  },
  "type": "list",
  "width": Object {
    "xs": 12,
  },
}
`;
